# diffusionlm-from-scratch

./: .gitignore  README.md  RESEARCH.md  pyproject.toml
docs/: app.js  index.html  style.css  trajectories.json
notebooks/: playground.ipynb  token_corruption.ipynb
scripts/: capture_trajectories.py
src/diffusionlm_from_scratch/: __init__.py  dataset.py  inference.py  model.py  scheduler.py  tokenizer.py  trainer.py
tinystories_tokenizer/: tokenizer.json  tokenizer_config.json
