[project]
name = "diffusionlm-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thibaut CHAUFFIER", email = "tchauffi@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "huggingface-hub>=0.24",
    "matplotlib>=3.10.9",
    "tensorboard>=2.20.0",
    "timm>=1.0.27",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "transformers>=5.12.1",
]

[project.scripts]
diffusionlm-from-scratch = "diffusionlm_from_scratch:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
]
